--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     font-weight: bold;
     text-align: center;
     display: flex;
+    flex-direction: column;
     margin-top: 1rem;
     justify-content: center;
     align-items: center;
@@ -61,7 +62,7 @@ body {
     color: white;
     font-size: 16px;
     font-weight: bold;
-    border: none;
+    border: 1px solid black;
     border-radius: 10px;
     width: 10rem;
     height: 3rem;
@@ -87,6 +88,48 @@ body {
     cursor: pointer;
 }
 
+#increment-btn {
+    background: rgb(2, 2, 85);
+}
+
 #save-btn {
     background: darkgreen;
+}
+
+#save-el {
+    font-size: 20px;
+}
+
+
+/* Mobile */
+@media only screen and (max-width: 600px) {
+    .item-container {
+        width: 80%;
+        max-width: none;
+    }
+
+    .h2 {
+        font-size: 30px;
+    }
+
+    #save-el {
+        font-size: 16px;
+    }
+
+    #increment-btn,
+    #save-btn,
+    #reset-btn {
+        width: 80%;
+        margin: 5px 0;
+        transition: transform 0.2s ease-in-out, filter 0.2s ease-in-out;
+    }
+    
+    #increment-btn:hover,
+    #save-btn:hover,
+    #reset-btn:hover {
+        transform: scale(1.1);
+        filter: brightness(1.3);
+        cursor: pointer;
+    }
+
 }
